# Wakatime-Leaderboards

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  CHANGELOG.md  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: bandit.yml  codeql.yml  coverage.yml  dependency-review.yml  release.yml  scorecard.yml  wakatime.yml
api/: badge_generator.py  data_formatter.py  main.py  markdown_generator.py  readme_manager.py  utils.py  wakatime.py
templates/: changelog_template.md
templates/.components/: changelog_header.md.j2  changelog_update.md.j2
tests/: test_main.py  test_utils.py
