[build-system]
requires = ["setuptools ~= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "Wakatime-Leaderboards"
description = "Automated WakaTime leaderboards for your GitHub profile"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Nicco", email = "38905025+Nicconike@users.noreply.github.com" },
]
dynamic = ["version"]
dependencies = ["PyGithub==2.5.0", "python-semantic-release==9.16.1"]

[project.optional-dependencies]
dev = ["pylint==3.3.3", "pipdeptree==2.24.0"]
test = ["pytest-cov==6.0.0"]

[project.urls]
Homepage = "https://github.com/nicconike/wakatime-leaderboards"
documentation = "https://github.com/Nicconike/Wakatime-Leaderboards/blob/master/README.md"
"Bug Tracker" = "https://github.com/nicconike/wakatime-leaderboards/issues"

[tool.semantic_release]
version_variables = ["api/main.py:__version__"]
tag_format = "v{version}"
commit_message = "chore: Version Release {version}"
branch = "master"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
    "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
trim_blocks = true

[tool.semantic_release.plugins]
verify_conditions = ["@semantic-release/git", "@semantic-release/github"]
analyze_commits = ["@semantic-release/commit-analyzer"]
generate_notes = ["@semantic-release/release-notes-generator"]
prepare = ["@semantic-release/changelog", "@semantic-release/git"]
publish = ["@semantic-release/github"]
success = ["@semantic-release/github"]
fail = ["@semantic-release/github"]
