[build-system]
requires = ["setuptools>=80.0,<90.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Wakatime-Leaderboards"
version = "1.2.4"
authors = [{ name = "Nicco", email = "github.giving328@passmail.com" }]
description = "Automated WakaTime Leaderboards for your GitHub profile"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "wakatime",
    "github",
    "stats",
    "api",
    "automation",
    "productivity",
    "coding",
    "development",
    "programming",
    "leaderboards",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["PyGithub==2.8.1", "python-semantic-release==10.5.3"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "bandit==1.9.2",
    "pylint==4.0.4",
    "python-dotenv==1.2.1",
    "pipdeptree==2.30.0",
    "twine==6.2.0",
]
test = ["pytest-cov==7.0.0"]

[project.urls]
Homepage = "https://github.com/Nicconike/Wakatime-Leaderboards"
Changelog = "https://github.com/Nicconike/Wakatime-Leaderboards/blob/master/CHANGELOG.md"
Documentation = "https://github.com/Nicconike/Wakatime-Leaderboards/blob/master/README.md"
Issues = "https://github.com/nicconike/wakatime-leaderboards/issues"

[tool.setuptools.packages.find]
where = ["api"]

[tool.semantic_release]
version_variables = ["api/main.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"
tag_format = "v{version}"
commit_message = "chore(release): Version Release v{version}"
logging_use_named_masks = true
commit_parser = "conventional"
commit_parser_options = { parse_squash_commits = true, ignore_merge_commits = true }

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.changelog]
default_templates.changelog_file = "CHANGELOG.md"
mode = "update"
insertion_flag = "<!-- CHANGELOG -->"
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''Initial Commit*''',
]

[tool.semantic_release.changelog.environment]
trim_blocks = true

[tool.semantic_release.publish]
upload_to_vcs_release = true
upload_to_pypi = true
